Fixing contract logics to draw winner

--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
                                 <img  class="support-images" src="https://cryptologos.cc/logos/usd-coin-usdc-logo.png?v=014"/>
                                     <div class="support-content">
                                         <h4>Total value locked: <span id="totalValueLocked"></span></h4>
-                                        <p>Farm APR: 20%</p>
+                                        <p>Farm APR: 15%</p>
 
                                         <p>USDC in your wallet: <span id="USDCBalance">..</span><p></p>
 
@@ -217,7 +217,7 @@
 
                 <table class="table table-listing">
                         <thead>
-                            <th>Your bets: </th>
+                            <th>Your bets BTC/USDC: </th>
                         </thead>
 
                         <tr id="bets">
